# ncmdump-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
ncmdump/: __init__.py  __main__.py  core.py  crypto.py
